--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,9 @@ theme:
     text: 'Roboto' 
     code: 'Roboto Mono'
 
+  docs_dir: docs-src
+  site_dir: docs
+
 # Copyright
 copyright: 'Copyright &copy; Luis Bueno @ Insper'
 
