--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,30 +35,30 @@ markdown_extensions:
   - toc:
       permalink: true
   - attr_list
-  - codehilite:
-      linenums: true
-      guess_lang: false
+  - pymdownx.superfences
+  - pymdownx.highlight
+
 nav:
   - Home: index.md
     
   - Corpo:
-    - 'Corpo': 'corpo/projeto1.md'
+    - 'Projetando o Corpo': 'corpo/projeto1.md'
     - 'Corte à Laser': laser.md
     #- 'Arquivos do corpo': 'link' 
   - Braços: 
-    - 'Braços': 'braco/projeto2.md'
+    - 'Projetando os Braços': 'braco/projeto2.md'
     - 'Motores e Suporte': 'braco/moterEsuporte.md'
     - 'Impressão 3D': 'braco/3dPrint.md'
     #- 'Arquivos de impressão 3d' : 'link2'
   - Eletrônica:
-    - 'Eletrônica': 'eletronica/projeto3.md'
+    - 'Projetando a placa eletrônica': 'eletronica/projeto3.md'
     - 'Usinagem de PCB': 'eletronica/usinagemPcb.md'
     - 'Solda': 'eletronica/solda.md' 
     - 'Montagem da Eletrônica': 'eletronica/montagemEletronica.md'
     #- 'Arquivos da placa eletrônica' : 'link3'
   - Programação:
     - 'Configuração da Arduino IDE': 'programacao/configArduinoIDE.md'
-    - 'Programação': 'programacao/oCodigo.md'
+    - 'Código': 'programacao/oCodigo.md'
     - 'Gravando o código na ESP8266': 'programacao/gravandoESP.md'
   - Montagem: 
     - 'montagem/montagem.md'
