--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,7 @@ nav:
 
 # extras
 extra_css:
-  - css/extra.css
+  - stylesheets/extra.css
 
 markdown_extensions:
   - markdown.extensions.attr_list
