--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,8 +67,8 @@ nav:
     - 'BOM': 'montagem/montagem.md'
 
 # extras
-#extra_css:
-#  - stylesheets/extra.css
+extra_css:
+  - stylesheets/extra.css
 
 markdown_extensions:
   - markdown.extensions.attr_list
